feat: implement main layout and routing for scheduling app
Add core layout components (MainLayout, Header, Footer) and section components (Hero, Features, HowItWorks, CTA)
Set up React Router for navigation and add radix-ui navigation menu
Create reusable card components (FeatureCard, StepCard) with responsive design
Update color scheme and styling in index.css

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.8",
     "class-variance-authority": "^0.7.1",
@@ -17,6 +18,7 @@
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8"
   },
